--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <div class="tetris__score-points" id="score-points">0</div>
             <!-- <div class="next-tetro__playfield"></div> -->
             <div class="buttons">
-                <div><button class="top-button">↩️</button></div>
-                <div><button class="left-button">⬅️</button><button class="down-button">⬇️</button><button
-                        class="right-button">➡️</button>
+                <div><button class="top-button">↑</button></div>
+                <div><button class="left-button">←</button><button class="down-button">↓</button><button
+                        class="right-button">→</button>
                 </div>
-                <div><button class="drop-button">⏬</button></div>
+                <div><button class="drop-button">⇓</button></div>
             </div>
             <button class="main-restart">restart</button>
         </div>
         <div class="game-over">
-            <div class="game-over__heading">Your score is <span class="game-over__score"></span> points</div>
+            <div class="game-over__heading">Your score is<br> <span class="game-over__score"></span> points</div>
             <button class="restart">Restart</button>
         </div>
 
